--- a/src/Services/WorkSchedule/WorkSchedule.API/appsettings.json
+++ b/src/Services/WorkSchedule/WorkSchedule.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=ScheduleDb;User Id=admin;Password=admin"
+    "DefaultConnection": "Server=localhost;Port=5432;Database=ScheduleDb;User Id=admin;Password=admin1234"
   },
   "Logging": {
     "LogLevel": {
