Payroll and WorkTimeTracker Grpc Communication Added

--- a/src/Services/Payroll/Payroll.API/appsettings.json
+++ b/src/Services/Payroll/Payroll.API/appsettings.json
@@ -4,6 +4,9 @@
     "DatabaseName": "PayrollDb",
     "CollectionName": "Payrolls"
   },
+  "GrpcSettings": {
+    "WorkTimeTrackerUrl": "http://localhost:5003"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
