--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -62,6 +62,7 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - "DatabaseSettings__ConnectionString=mongodb://payrolldb:27017"
+      - "GrpcSettings__WorkTimeTrackerUrl=http://worktimetracker.grpc"
     depends_on:
       - payrolldb
     ports:
