--- a/src/Services/Payroll/Payroll.API/Payroll.API.csproj
+++ b/src/Services/Payroll/Payroll.API/Payroll.API.csproj
@@ -12,10 +12,17 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.5.1" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+    <PackageReference Include="Grpc.AspNetCore" Version="2.52.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.2" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.19.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Protobuf Include="..\..\WorkTimeTracker\WorkTimeTracker.Grpc\Protos\workTimeTracker.proto" GrpcServices="Client">
+      <Link>Protos\workTimeTracker.proto</Link>
+    </Protobuf>
   </ItemGroup>
 
 </Project>
