--- a/src/Services/WorkTimeTracker/WorkTimeTracker.Grpc/appsettings.json
+++ b/src/Services/WorkTimeTracker/WorkTimeTracker.Grpc/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "Uris": {
+    "EmployeeUrl": "http://localhost:5000"
+  },
   "DatabaseSettings": {
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "WorkTimeTrackerDb",
